--- a/versuch_1/theorie.tex
+++ b/versuch_1/theorie.tex
@@ -39,7 +39,7 @@ $
 \Delta \omega=\frac{R}{L}
 \end{equation}
 , d.h. bei kleineren Widerständen ergeben sich 'schärfere' Peaks.
-\paragraph{}Bei dieser Betrachtung wird angenommen, dass der Ohmsche Widerstand der Spule vernachlässigt, unter der Annahme, dass dieser sehr klein ist, was in der Praxis jedoch nicht immer der Fall ist.
+\paragraph{}Bei dieser Betrachtung wird angenommen, dass der Ohmsche Widerstand der Spule vernachlässigbar klein ist. Dies in der Praxis jedoch nicht immer der Fall.
 Wenn die Spule einen Widerstand $R_L$ besitzt, ändert sich Gleichung (2) zu
 \begin{equation}
 \Rightarrow\left| U_a \right| = \frac{R}{\sqrt{(R+R_L)^2+\left(\omega L - \frac{1}{\omega C}\right)}}\cdot \left| U_e \right|
@@ -86,8 +86,8 @@ Bei der Resonanzfrequenz (3) geht nun $\left| U_a \right|\longrightarrow 0$, d.h
 \Delta\omega = \frac{1}{RC\sqrt{1-(1-\frac{1}{\sqrt{2}})^2}}
 \end{equation}
 
-Hier ergeben also größere Widerstände 'schärfere' Peaks.  
-\newpage Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ein nicht weiter spezifizierter zusätzlicher Widerstand $R_{zus}$ eingefügt, der die Widerstände der Steckverbindungen darstellt. \\Siehe Abb. \ref{plan:sperr-R_L} auf Seite \pageref{plan:sperr-R_L}.
+Hier ergeben größere Widerstände 'schärfere' Peaks.  
+\newpage Auch hier kann man der Spule einen Widerstand $R_L$ zuweisen, außerdem wurde ein nicht weiter spezifizierter zusätzlicher Widerstand $R_{zus}$ eingefügt, der die Widerstände der Steckverbindungen darstellt, s iehe Abb. \ref{plan:sperr-R_L} auf Seite \pageref{plan:sperr-R_L}.
 \begin{figure}
 \centering
 \begin{circuitikz}
