--- a/versuch_1/ergebnisse.tex
+++ b/versuch_1/ergebnisse.tex
@@ -15,6 +15,21 @@ Die geringen Abweichungen der Resonanzfrequenz, die überdies hinaus zu sehen si
 Ähnlich verhält es sich mit den aus dem Betrieb der zweiten Schaltung als Sperrfilter entstandenen Kurven (Abb. \ref{plot:sperr}). Nach Berücksichtigung des ohmschen Widerstandes der Spule ergeben sich nur noch minimale Abweichungen zwischen Theorie nach Formel \eqref{form:sperr} und den Messwerten, einzig die Resonanzfrequenz konnte nicht getroffen werden. Hier scheint es ebenfalls am wahrscheinlichsten, dass die Induktivität der zweiten Spule mit 36 mH nicht korrekt ist, oder dass in anderen Bauteilen ungewollte Induktivitäten oder Kapazitäten auftreten.
 \\
 Der Statistische Fehler wurde in beiden Versuchen nicht mit dargestellt, da er im Verhältniss zu den gemessenen Werten sehr gering ausfällt und die Graphen unnötig unübersichtlicher gestalten würde.
+
+\begin{table}
+\centering
+\begin{tabular}{cc}
+$R_{mess}$ in $\Omega$ & $R_{zus}$ aus Fit \\
+\hline 
+1 & 11,48 \\ 
+2 & 11.20 \\ 
+5 & 10.70 \\ 
+10 & 10.57 \\  
+20 & 10.88 \\ 
+\hline
+\end{tabular}
+\
+\end{table}
 \begin{figure}
 	\includegraphics[width=.9\textwidth]{images/plot/durchlassfilter+theorie+R_ges-fit.png}
 \caption{Plot der Messdaten des Durchlassfilters (Theoriekurven mit gefittetem Gesamtwiderstand)}
