modified:   header.tex

--- a/versuch_2/header.tex
+++ b/versuch_2/header.tex
@@ -5,7 +5,7 @@
 %Referenzen zwischen unterschiedlichen Dateien
 \usepackage{xr}
 \externaldocument{theorie}
-
+\usepackage{lscape}
 %Deutsche Sprachunterstützung
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
