--- a/versuch_2/ergebnisse.tex
+++ b/versuch_2/ergebnisse.tex
@@ -498,3 +498,14 @@ Dann ergibt sich folgender Graph:
 \end{figure}
 
 \end{comment}
+
+Aus beiden Methoden lässt sich folgern, dass der mittlere Wärmeausdehnungkoeffizient des Stabs von der Temperatur abhängig ist.
+
+\subsection{Fazit}
+
+
+Der Bau des Interferometers hat sich als sehr schwierig herrausgestellt, da die Spiegel sehr genau ausgerichtet sein müssen.
+Weitere Probleme sind bei der Messung der Ausdehnung des Stabs entstanden. Der vom Stab geschobene Spiegel musste so auf einer Schiene befestigt sein, dass er sich dabei nicht verdreht.
+Durch das Zählen von Interferenzringen konnten dennoch Messungen durchgeführt werden, welche damit die Funktionstüchtigkeit des Michelson-Interferometers bestätigten.
+
+
