--- a/versuch_2/protokoll.tex
+++ b/versuch_2/protokoll.tex
@@ -1,7 +1,7 @@
 \input{header}
 \begin{document}
 
-\title{Frequenzfilter}
+\title{Messung der temperaturabhängigen Ausdehnung mit Hilfe eines Michelson-Interferometers}
 \subtitle{PPG8}
 \date{November 2013}
 \author{Udo Beier \and Leon Brückner \and Valentin Olpp \and Marco Zech \and Sebastian Ziegler}
