Formatierung verbessert Bild zur Verkippung eingefügt

--- a/versuch_2/ergebnisse.tex
+++ b/versuch_2/ergebnisse.tex
@@ -4,188 +4,193 @@
 Mit der oben beschriebenen Messmethode, wurden folgende Werte gemessen:
 \begin{table}
 
-\begin{tabular}{|c|c|}
-\hline 
+\begin{tabular}{c|c}
 t in s & dN/dt in 1/10s \\ 
-\hline
+\Hline
 20	&34\\ 
-\hline
+
 40	&29\\ 
-\hline
+
 60	&32\\ 
-\hline
+
 80	&28\\ 
-\hline
+
 100	&31\\ 
-\hline
+
 120	&25\\ 
-\hline
+
 140	&28\\ 
-\hline
+
 160	&24\\ 
-\hline
+
 180	&27\\ 
-\hline
+
 200	&24\\ 
-\hline
+
 220	&32\\ 
-\hline
+
 240	&25\\ 
-\hline
+
 260	&24\\ 
-\hline
+
 280	&27\\ 
-\hline	
+	
 300	&26\\ 
-\hline
+
 320	&25\\ 
-\hline
+
 340	&27\\ 
-\hline
+
 420	&29\\ 
-\hline	
+	
 440	&29\\ 
-\hline
+
 460	&26\\ 
-\hline
+
 480	&25\\ 
-\hline
+
 500	&26\\ 
-\hline
+
 560	&26\\ 
-\hline
+
 580	&22\\ 
-\hline	
+	
 600	&25\\ 
-\hline
+
 620	&22\\ 
-\hline
+
 640	&21\\ 
-\hline
+
 660	&20\\ 
-\hline
+
 680	&23\\ 
-\hline
+
 700	&21\\ 
-\hline
+
 760	&22\\ 
-\hline
+
 780	&20\\ 
-\hline
+
 800	&24\\ 
-\hline
+
 820	&22\\ 
-\hline
+
 840	&24\\ 
-\hline
+
 860	&23\\ 
-\hline
+
 880	&22\\ 
-\hline
+
 900	&20\\ 
-\hline
+
 920	&22\\ 
-\hline
+
 940	&20\\ 
-\hline
+
 960	&21\\ 
-\hline
+
 980	&22\\ 
-\hline
+
 1000&	18\\ 
-\hline
+...&...\\
+\end{tabular}
+\begin{tabular}{c|c}
+              &           \\
+\end{tabular}
+\begin{tabular}{c|c}
+
 1080&	19\\ 
-\hline	
+	
 1100&	19\\ 
-\hline
+
 1120&	18\\ 
-\hline
+
 1160&	17\\ 
-\hline
+
 1180&	16\\ 
-\hline
+
 1200&	18\\ 
-\hline
+
 1220&	18\\ 
-\hline
+
 1240&	16	\\ 
-\hline
+
 1260&	17\\ 
-\hline
+
 1280&	15\\ 
-\hline
+
 1300&	18\\ 
-\hline
+
 1320&	16\\ 
-\hline
+
 1340&	15\\ 
-\hline
+
 1360&	14\\ 
-\hline
+
 1440&	13\\ 
-\hline
+
 1460&	12\\ 
-\hline
+
 1480&	12	\\ 
-\hline
+
 1500&	13\\ 
-\hline
+
 1520&	12\\ 
-\hline
+
 1540&	12\\ 
-\hline
+
 1560&	10	\\ 
-\hline
+
 1580&	12\\ 
-\hline
+
 1600&	12\\ 
-\hline
+
 1640&	9\\ 
-\hline
+
 1660&	8\\ 
-\hline
+
 1680&	8\\ 
-\hline
+
 1700&	8\\ 
-\hline
+
 1720&	9\\ 
-\hline
+
 1740&	8\\ 
-\hline
+
 1760&	8\\ 
-\hline
+
 1780&	8\\ 
-\hline
+
 1840&	7\\ 
-\hline
+
 1860&	6\\ 
-\hline
+
 1880&	7\\ 
-\hline
+
 1900&	6\\ 
-\hline
+
 1920&	6\\ 
-\hline
+
 1940&	6\\ 
-\hline
+
 2000&	5\\ 
-\hline
+
 2020&	5\\ 
-\hline
+
 2040&	5\\ 
-\hline
+
 2060&	5\\ 
-\hline
+
 2080&	5\\ 
-\hline
+
 2160&	5\\ 
-\hline
+
 2180&	4\\ 
-\hline
+
 2200&	4\\ 
-\hline
+
 2220&	3\\ 
-\hline
+
 \end{tabular} 
 
 \label{tbl_1}
@@ -237,37 +242,37 @@ Aus $ \Delta L = \frac{\lambda}{2} \cdot \Delta N $ folgt:
 
 \begin{table}
 \begin{tabular}{|c|c|c|}
-\hline
+
 Fraktion&	Zeitintervalle in s	& $\Delta T $ in $ ^{\circ} C$ \\
-\hline
+
 1		&[20, 180]		&26,5\\
-\hline
+
 2		&[200, 340]		&18,9\\
-\hline
+
 3		&[420, 500]		&8,7\\
-\hline
+
 4		&[560, 700]		&11,1\\
-\hline
+
 5		&[760, 880]		&7,9\\
-\hline
+
 6		&[900,1000]		&6,1\\
-\hline
+
 7		&[1080,1120]		&1,9\\
-\hline
+
 8		&[1160,1260]		&4,4\\
-\hline
+
 9		&[1280,1360]		&3,6\\
-\hline
+
 10		&[1440,1600]		&4,6\\
-\hline
+
 11		&[1640,1780]		&2,9\\
-\hline
+
 12		&[1840,1940]		&1,8\\
-\hline
+
 13		&[2000,2080]		&1,3\\
-\hline
+
 14		&[2160,2220]		&0,7\\
-\hline
+
 \end{tabular}
 
 \caption{Einteilung in Fraktionen}
@@ -281,37 +286,37 @@ Innerhalb dieser Fraktionen ergeben sich folgende Mittelwerte mit zugehörigen F
 \begin{table}
 \begin{tabular}{|c|c|c|}
 
-\hline
+
 Fraktion	&Mittelwert von dN/dt in 1/10s	&Fehler von dN/dt in 1/10s \\
-\hline
+
 1		&28,67				&1,08\\
-\hline
+
 2		&26,25				&0,92\\
-\hline
+
 3		&27					&0,84\\
-\hline
+
 4		&22,5				&0,73\\
-\hline
+
 5		&22,43				&0,53\\
-\hline
+
 6		&20,5				&0,62\\
-\hline
+
 7		&18,67				&0,33\\
-\hline
+
 8		&17					&0,37\\
-\hline
+
 9		&15,6				&0,68\\
-\hline
+
 10		&12					&0,29\\
-\hline
+
 11		&8,25				&0,16\\
-\hline
+
 12		&6,33				&0,21\\
-\hline
+
 13		&5					&0\\
-\hline
+
 14		&4					&0,41\\
-\hline
+
 \end{tabular}
 \caption{Mittelwerte und Fehler von dN/dt}
 \label{tbl_3}
@@ -349,37 +354,37 @@ Es ergibt sich so:
 
 \begin{table}
 \begin{tabular}{|c|c|c|}
-\hline
+
 Mittlere Temperatur in $^{\circ}C$ &$ \alpha $ in $ 10^{-5}\frac {1}{^{\circ}C} $	&Fehler von $ \alpha $ in $ 10^{-5} \frac{1}{^{\circ}C}  $ \\
-\hline
+
 -115,6&				1,896	&		0,072\\
-\hline
+
 -90,2	&			2,129	&		0,075\\
-\hline
+
 -66,9	&			2,719	&		0,085\\
-\hline
+
 -50,1	&			3,108	&		0,101\\
-\hline
+
 -35,9	&			3,731	&		0,089\\
-\hline
+
 -27,9	&			3,680	&		0,112\\
-\hline
+
 -19,2	&			4,305	&		0,078\\
-\hline
+
 -14,0	&			4,231	&		0,093\\
-\hline
+
 -9,3	&			3,797	&		0,166\\
-\hline
+
 -2,1	&			4,571	&		0,112\\
-\hline
+
 2,1		&		4,362		&	0,086\\
-\hline
+
 5,3		&		3,851		&	0,128\\
-\hline
+
 7,7		&		3,370		&	0,011\\
-\hline
+
 9,4		&		3,755		&	0,385\\
-\hline
+
 \end{tabular}
 \label{tbl_4}
 \caption{Wärmeausdehnungskoeffizient in Abhängigkeit der Temperatur}
