--- a/versuch_2/theorie.tex
+++ b/versuch_2/theorie.tex
@@ -112,6 +112,7 @@ Die beobachtbaren Interferenzeffekte hängen maßgeblich von der genauen Ausrich
 Sind etwa die reflektierenden Spiegel nicht exakt senkrecht zum einfallenden Strahl ausgerichtet oder der halbdurchlässige Spiegel nicht in einem Winkel von exakt $ 45 ^\circ$  zum einfallenden Strahl justiert, so führt diese Verkippung der Spiegel zu deutlich sichtbaren Interferenzstreifen, da die Wellenfronten der beiden interferierenden Strahlen dann nicht parallel auf den Schirm treffen. (Abb. \ref{verkippung}: Die Differenz zwischen den beiden gestrichelten Strecken entspricht dem Phasenversatz zwischen den beiden Wellen an dem entsprechenden Punkt auf dem Schirm. Der Versatz ändert sich in der Horizontalen.) Treffen sich weiter die beiden Strahlbündel bei Vereinigung auf dem halbdurchlässigen Spiegel nicht mittig am gleichen Punkt, so beobachtet man sehr deutlich Interferenzringe, da sich die Laufzeiten bei Verschieben des betrachteten Punkts unterschiedlich ändern. 
 
 \begin{figure}
+\centering
         \includegraphics[width=.9\textwidth]{images/verkippung.png}
 \caption{Darstellung der Interferenz zwischen zwei verkippten Wellenfronten}
 \label{verkippung}
